--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Portfolio desenvolvido com React, Express e MongoDB",
   "main": "app.js",
+  "private": true,
   "scripts": {
     "start": "node app.js",
     "devStart": "nodemon app.js"
@@ -13,7 +14,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "helmet": "^4.3.1",
-    "mongoose": "^5.11.11",
+    "mongoose": "^6.0.11",
     "nodemailer": "^6.4.17"
   },
   "devDependencies": {
