--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "googleapis": "^91.0.0",
     "helmet": "^4.3.1",
     "mongoose": "^6.0.11",
     "nodemailer": "^6.4.17"
