Atualizando pacotes de dependencias

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,11 +1,11 @@
 {
   "name": "portifolio-react",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "next": "^12.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^12",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
-    "build": "next build"
+    "build": "next build && next export"
   },
   "browserslist": {
     "production": [
