--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,5 +26,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.15",
+    "typescript": "^4.7.4"
   }
 }
