--- a/front-end/.env.example
+++ b/front-end/.env.example
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_APP_URL=https://devdiegomatos.com.br/
+NEXT_PUBLIC_APP_URL=https://devdiegomatos.com.br
+NEXT_PUBLIC_API_URL=https://api.devdiegomatos.com.br
