--- a/.github/workflows/desenvolvimento.yml
+++ b/.github/workflows/desenvolvimento.yml
@@ -2,7 +2,7 @@ name: Deploy front end em Desenvolvimento
 
 on:
   push:
-    branches: ["area-de-desenvolvimento"]
+    branches: ["desenvolvimento"]
   
   workflow_dispatch:
 
@@ -18,6 +18,20 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: "npm"
+          cache-dependency-path: front-end/package-lock.json
+      
+      - name: Cache NextJS
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/front-end/.next/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       
       - name: Build Project
         run: |
