--- a/.github/workflows/desenvolvimento.yml
+++ b/.github/workflows/desenvolvimento.yml
@@ -48,5 +48,5 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          TARGET: public_html/
+          TARGET: ${{ secrets.REMOTE_TARGET }}public_html/desenvolvimento/
           EXCLUDE: "/dist/, /node_modules/"
