Adicionando variáveis de ambiente

--- a/.github/workflows/desenvolvimento.yml
+++ b/.github/workflows/desenvolvimento.yml
@@ -6,6 +6,11 @@ on:
   
   workflow_dispatch:
 
+env:
+  NEXT_PUBLIC_APP_URL: https://devdiegomatos.com.br
+  NEXT_PUBLIC_API_URL: https://api.devdiegomatos.com.br
+  NEXT_PUBLIC_EMAIL: diego@devdiegomatos.com.br
+
 jobs:
   build:
     runs-on: ubuntu-latest
