--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "next": "^12",
+    "next-sitemap": "^3.1.15",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -11,7 +12,8 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
-    "build": "next build && next export"
+    "build": "next build && next export",
+    "postbuild": "next-sitemap"
   },
   "browserslist": {
     "production": [
