--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,7 +4,8 @@
     "next": "^12",
     "next-sitemap": "^3.1.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^8.3.2"
   },
   "eslintConfig": {
     "extends": "react-app"
