--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ env:
   NEXT_PUBLIC_APP_URL: https://devdiegomatos.com.br
   NEXT_PUBLIC_API_URL: https://api.devdiegomatos.com.br
   NEXT_PUBLIC_EMAIL: diego@devdiegomatos.com.br
+  NEXT_PUBLIC_GA_ID:
 
 jobs:
   build:
