--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,7 @@
     "next-sitemap": "^3.1.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.4.0",
     "swiper": "^8.3.2"
   },
   "eslintConfig": {
