Atualizando dependencias e instalando tailwindcss

--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -16,13 +16,15 @@
     "module": "CommonJS",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "moduleResolution": "node"
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "lib/gtag.js"  ],
+    "**/*.tsx",
+    "lib/gtag.js"
+  ],
   "exclude": [
     "node_modules"
   ]
