--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "autoprefixer": "^10.4.14",
