--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,8 +5,7 @@
     "next-sitemap": "^4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.4.0",
-    "swiper": "^9"
+    "react-icons": "^4.4.0"
   },
   "eslintConfig": {
     "extends": "react-app"
