--- a/.github/workflows/test_fullphp_site.yml
+++ b/.github/workflows/test_fullphp_site.yml
@@ -21,4 +21,4 @@ jobs:
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}domains/devdiegomatos.com.br/public_html/teste-fullphp/
-          EXCLUDE: "/dist/, /node_modules/""
+          EXCLUDE: "/dist/, /node_modules/"
