--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "twig/twig": "^3.8",
         "vlucas/phpdotenv": "^5.6",
-        "phpmailer/phpmailer": "^6.9"
+        "phpmailer/phpmailer": "^6.9",
+        "guzzlehttp/guzzle": "^7.8"
     },
     "autoload": {
         "psr-4": {
